# humanoid_walking_sim

./: README.md
two_link_robot/src/: main.cpp
zjlrobotone/: CMakeLists.txt  package.xml
zjlrobotone/config/: joint_names_zjlrobotone.yaml
zjlrobotone/convex/: left_foot_Link-ch.txt  right_foot_Link-ch.txt
zjlrobotone/launch/: display.launch  gazebo.launch
zjlrobotone/meshes/: left_ankle_Link.STL  left_foot_Link.STL  left_hip_roll_Link.STL  left_hip_yaw_Link.STL  left_lower_arm_Link.STL  left_shoulder_pitch_Link.STL  left_thigh_Link.STL  left_upper_arm_Link.STL  neck_Link.STL  right_ankle_Link.STL  right_foot_Link.STL  right_hip_roll_Link.STL  right_hip_yaw_Link.STL  right_lower_arm_Link.STL  right_shoulder_pitch_Link.STL  right_thigh_Link.STL  right_upper_arm_Link.STL
zjlrobotone/rsdf/zjlrobotone/: left_foot_Link.rsdf  right_foot_Link.rsdf
zjlrobotone/urdf/: zjlrobotone.urdf
zjlrobotone/urdf/11/: zjlrobotone.csv  zjlrobotone.urdf
zjlrobotone_control/: CMakeLists.txt  main.cpp
zjlrobotone_gazebo/: CMakeLists.txt  package.xml
zjlrobotone_gazebo/config/: controllers.yaml
zjlrobotone_gazebo/launch/: zjlrobotone.launch  zjlrobotone_controller.launch
zjlrobotone_gazebo/worlds/: nimbro_op.world
